--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
           <div class="col-md-12">
             <ul class="social-buttons">
               <li>
-                <a href="qq.html" class="social-btn"
+                <a href="QQ.html" class="social-btn"
                   ><i class="fa fa-qq"></i
                 ></a>
               </li>
